security: fix critical RCE and sandbox-bypass findings from static VAPT-style review
CRITICAL:
- ExecutionController /run/sync bypassed the Docker sandbox entirely and ran
  candidate-submitted code directly on the host via ProcessBuilder
  (CodeExecutor.java), with zero isolation. Rewired to use DockerCodeExecutor.
- ExecutionWorkerPool silently fell back to the same unsandboxed executor
  whenever the Docker sandbox threw an exception (fail-open). Changed to
  fail closed: on sandbox failure, return an error instead of executing
  untrusted code on the host.
- Custom judge type ('judgeType=custom') evaluated author-supplied JS via
  javax.script.ScriptEngine with unrestricted Java host interop and no
  sandboxing -- a remote code execution primitive with access to the
  execution-service's Docker socket (full host/cluster compromise chain).
  Removed the eval path entirely in both CodeExecutor and DockerCodeExecutor;
  custom judges now return a clear 'disabled' result pending a properly
  isolated evaluator.

HIGH:
- Hardened DockerCodeExecutor container HostConfig for every language
  (previously only network-isolated + memory/cpu-count limited): added
  cap-drop=ALL, pids-limit=64 (fork-bomb protection), readonly rootfs,
  and no-new-privileges security-opt.
- Fixed CORS misconfiguration (wildcard origin + allowCredentials=true) in
  proctoring-service and reporting-service SecurityConfig, and wildcard
  origin on the proctoring WebSocket endpoint. All now use a configurable
  allowlist (securecode.cors.allowed-origins / SECURECODE_CORS_ALLOWED_ORIGINS).
- Removed a hardcoded default JWT signing secret checked into
  backend/k8s/manifests.yaml as a plaintext ConfigMap value. Moved to a
  dedicated Secret with no baked-in default, requiring explicit injection
  at deploy time (documented kubectl/secret-manager instructions added).

Updated ExecutionIntegrationTest to mock DockerCodeExecutor (the now-correct
sandboxed dependency of the /run/sync endpoint) instead